# wasmcloud-s3-provider

./: Cargo.toml  Makefile  README.md  provider.mk  provider_test_config.toml
src/: main.rs
tests/: blobstore_s_3_test.rs
