[package]
name = "blobstore-s3"
version = "0.2.14"
edition = "2018"
resolver = "2"

[dependencies]
async-trait = "0.1"
base64 = "0.13"
bytes = "1.0"
chrono = "0.4"
crossbeam="0.8"
futures = "0.3"
log = "0.4"
once_cell = "1.8"
hyper = { version = "0.14.0", features = ["runtime"] }
hyper-proxy = "0.9.0"
hyper-tls = "0.5.0"
reqwest = "0.11"
rmp-serde = "0.15"
serde_bytes = "0.11"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.5"
blobstore-interface = { git = "https://github.com/based-template/auxiliary-blobstore-interface.git" }
rusoto_core = { version="0.46.0", default_features=false, features=["rustls"] }
rusoto_s3 = { version="0.46.0", default_features=false, features=["rustls"] }
wasmbus-rpc = { git = "https://github.com/based-template/weld.git" }
#wasmbus-rpc = "0.5.2"

# test dependencies
[dev-dependencies]
wasmcloud-test-util = "0.1.7"

[[bin]]
name = "blobstore_s_3"
path = "src/main.rs"
